src/parser.c
#include "parser.h"

#include "common.h"
#include "vm.h"

#define EXPR(t)									\
	Expr * expr = malloc(sizeof(Expr));			\
	expr->type = t;								\
	expr->marked = false;

#define STMT(t)									\
	Stmt * stmt = malloc(sizeof(Stmt));			\
	stmt->type = t;								\
	stmt->marked = false

void mark_expr(Expr * expr, Assoc_Source assoc)
{
	expr->marked = true;
	expr->assoc = assoc;
}

void mark_stmt(Stmt * stmt, Assoc_Source assoc)
{
	stmt->marked = true;
	stmt->assoc = assoc;
}

bool __match(Lexer * lexer, Token_Type type)
{
	if (lexer->token.type == type) {
		lexer_advance(lexer);
		return true;
	}
	return false;
}

#define token() (lexer->token)

#define match(x) __match(lexer, (x))

bool __is(Lexer * lexer, Token_Type type)
{
	return lexer->token.type == type;
}
#define is(x) __is(lexer, (x))

#define advance() lexer_advance(lexer)

void __expect(Lexer * lexer, Token_Type type)
{
	if (!match(type)) {
		fatal_assoc(token().assoc,
					"Expected %s, got %s instead",
					token_to_string((Token) { type }),
					token_to_string(lexer->token));
	}
}
#define expect(x) __expect(lexer, (x))

void __weak_expect(Lexer * lexer, Token_Type type)
{
	if (!is(type)) {
		fatal_assoc(token().assoc,
					"Expected %s, got %s instead",
					token_to_string((Token) { type }),
					token_to_string(lexer->token));
	}
}
#define weak_expect(x) __weak_expect(lexer, (x))

Expr * parse_atom(Lexer * lexer)
{
	// Check for subexpression
	if (match('(')) {
		Expr * subexpr = parse_expression(lexer);
		expect(')');
		return subexpr;
	}
	Token token = lexer->token;
	switch (token.type) {
	case TOKEN_NONE: {
		EXPR(EXPR_ATOM);
		mark_expr(expr, token.assoc);
		expr->atom.value = value_none();
		advance();
		return expr;
	} break;
	case TOKEN_INTEGER_LITERAL: {
		EXPR(EXPR_ATOM);
		mark_expr(expr, token.assoc);
		expr->atom.value = value_new_integer(token.integer_literal);
		advance();
		return expr;
	} break;
	case TOKEN_FLOAT_LITERAL: {
		EXPR(EXPR_ATOM);
		mark_expr(expr, token.assoc);
		expr->atom.value = value_new_float(token.float_literal);
		advance();		
		return expr;
	} break;
	case TOKEN_TRUE:
	case TOKEN_FALSE: {
		EXPR(EXPR_ATOM);
		mark_expr(expr, token.assoc);
		expr->atom.value = value_new_bool(token.type == TOKEN_TRUE);
		advance();		
		return expr;
	} break;
	case TOKEN_STRING_LITERAL: {
		EXPR(EXPR_ATOM);
		mark_expr(expr, token.assoc);
		expr->atom.value = value_new_string(token.string_literal);
		advance();
		return expr;
	} break;
	case TOKEN_NAME: {
		EXPR(EXPR_VAR);
		mark_expr(expr, token.assoc);
		expr->var.name = token.name;
		advance();		
		return expr;
	} break;
	}
}

Expr ** parse_comma_expression(Lexer * lexer)
{
	Expr ** expressions = NULL;
	sb_push(expressions, parse_expression(lexer));
	while (match(',')) {
		sb_push(expressions, parse_expression(lexer));
	}
	return expressions;
}

Expr * parse_function_call(Lexer * lexer)
{
	Expr * left = parse_atom(lexer);
	if (match('(')) {
		Expr ** args = NULL;
		if (match(')')) {
			args = NULL;
		} else {
			args = parse_comma_expression(lexer);
			expect(')');
		}
		EXPR(EXPR_FUNCALL);
		mark_expr(expr, left->assoc);
		expr->funcall.func = left;
		expr->funcall.args = args;
		return expr;
	}
	return left;
}

Expr * parse_prefix(Lexer * lexer)
{
	if (is('-')) {
		Assoc_Source as = token().assoc;
		expect('-');
		EXPR(EXPR_UNARY);
		mark_expr(expr, as);
		expr->unary.operator = OP_NEGATE;
		expr->unary.operand = parse_prefix(lexer);
		return expr;
	} else if (match('!')) {
		Assoc_Source as = token().assoc;
		expect('!');
		EXPR(EXPR_UNARY);
		mark_expr(expr, as);
		expr->unary.operator = OP_NOT;
		expr->unary.operand = parse_prefix(lexer);
	} else {
		return parse_function_call(lexer);
	}
}

bool is_bool_op(Token_Type t)
{
	return
		t == TOKEN_EQ || t == TOKEN_NE ||
		t == '>' || t == '<' ||
		t == TOKEN_GTE || t == TOKEN_LTE;
}

Expr * parse_bool_ops(Lexer * lexer)
{
	Expr * left = parse_prefix(lexer);
	if (is_bool_op(token().type)) {
		Assoc_Source as = token().assoc;
		EXPR(EXPR_BINARY);
		mark_expr(expr, as);
		switch (token().type) {
		case TOKEN_EQ:
			expr->binary.operator = OP_EQ;
			break;
		case TOKEN_NE:
			expr->binary.operator = OP_NE;
			break;
		case '>':
			expr->binary.operator = OP_GT;
			break;
		case '<':
			expr->binary.operator = OP_LT;
			break;
		case TOKEN_GTE:
			expr->binary.operator = OP_GTE;
			break;
		case TOKEN_LTE:
			expr->binary.operator = OP_LTE;
			break;
		}
		advance();
		expr->binary.left = left;
		expr->binary.right = parse_bool_ops(lexer);
		return expr;
	} else {
		return left;
	}
}

Expr * parse_add_ops(Lexer * lexer)
{
	Expr * left = parse_bool_ops(lexer);
	if (is('+') || is('-')) {
		Assoc_Source as = token().assoc;
		EXPR(EXPR_BINARY);
		mark_expr(expr, as);
		switch (token().type) {
		case '+':
			expr->binary.operator = OP_ADD;
			break;
		case '-':
			expr->binary.operator = OP_SUBTRACT;
			break;
		}
		advance();
		expr->binary.left = left;
		expr->binary.right = parse_add_ops(lexer);
		return expr;
	} else {
		return left;
	}
}

Expr * parse_expression(Lexer * lexer)
{
	if (is(TOKEN_EOF)) return NULL;
	return parse_add_ops(lexer);
}

Stmt * parse_assignment(Lexer * lexer)
{
	STMT(STMT_ASSIGN);
	
	weak_expect(TOKEN_NAME);
	stmt->assign.name = token().name;
	advance();
	
	Assoc_Source as = token().assoc;
	expect('=');
	mark_stmt(stmt, as);
	stmt->assign.expr = parse_expression(lexer);
	expect(';');
	
	return stmt;
}

const char ** parse_function_parameters(Lexer * lexer)
{
	const char ** parameters = NULL;
	weak_expect(TOKEN_NAME);
	sb_push(parameters, token().name);
	advance();
	while (match(',')) {
		weak_expect(TOKEN_NAME);
		sb_push(parameters, token().name);
		advance();
	}
	return parameters;
}

Stmt ** parse_scope(Lexer * lexer)
{
	expect('{');
	Stmt ** body = NULL;
	while (!match('}')) {
		sb_push(body, parse_statement(lexer));
	}
	return body;
}

Stmt * parse_function_declaration(Lexer * lexer)
{
	Assoc_Source as = token().assoc;
	expect(TOKEN_FUNC);
	
	STMT(STMT_FUNC_DECL);
	mark_stmt(stmt, as);
	weak_expect(TOKEN_NAME);
	stmt->func_decl.name = token().name;
	advance();
	expect('(');
	if (match(')')) {
		stmt->func_decl.parameters = NULL;
	} else {
		stmt->func_decl.parameters = parse_function_parameters(lexer);
		expect(')');
	}
	stmt->func_decl.body = parse_scope(lexer);
	return stmt;
}

Stmt * parse_if_statement(Lexer * lexer)
{
	Assoc_Source as = token().assoc;
	expect(TOKEN_IF);
	
	STMT(STMT_IF);
	mark_stmt(stmt, as);
	stmt->_if.conditions = NULL;
	stmt->_if.bodies = NULL;
	stmt->_if.else_body = NULL;

	sb_push(stmt->_if.conditions, parse_expression(lexer));
	sb_push(stmt->_if.bodies, parse_scope(lexer));
	
	while (match(TOKEN_ELSE)) {
		if (match(TOKEN_IF)) {
			// Else if
			sb_push(stmt->_if.conditions, parse_expression(lexer));
			sb_push(stmt->_if.bodies, parse_scope(lexer));
		} else {
			// Else
			stmt->_if.else_body = parse_scope(lexer);
			break;
		}
	}
	return stmt;
}

Stmt * parse_statement(Lexer * lexer)
{
	if (is(TOKEN_EOF)) return NULL;
	
	if (is(TOKEN_PRINT)) {
		// print
		Assoc_Source as = token().assoc;
		expect(TOKEN_PRINT);
		STMT(STMT_PRINT);
		stmt->print.expr = parse_expression(lexer);
		mark_stmt(stmt, as);
		expect(';');
		return stmt;
	} else if (is(TOKEN_RETURN)) {
		// return
		Assoc_Source as = token().assoc;
		expect(TOKEN_RETURN);
		STMT(STMT_RETURN);
		stmt->_return.expr = parse_expression(lexer);
		mark_stmt(stmt, as);
		expect(';');
		return stmt;
	} else if (is(TOKEN_IF)) {
		// if
		return parse_if_statement(lexer);
	} else if (is(TOKEN_FUNC)) {
		// function declaration
		return parse_function_declaration(lexer);
	} else if (lexer_lookahead(lexer, 1).type == '=') {
		// TODO(pixlark): Kluge.
		/* Once we have l-expressions as a detailed thing, with
		   indexing and all that, how will we know that this is an
		   assignment??
		   -Paul T. Sun Dec 16 23:12:45 2018 */
		// assignment
		return parse_assignment(lexer);
	} else {
		// expression
		STMT(STMT_EXPR);
		stmt->expr.expr = parse_expression(lexer);
		mark_stmt(stmt, stmt->expr.expr->assoc);
		expect(';');
		return stmt;
	}
}
